style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Albert Sans", serif;
  color: #ffffffcd;
}

html {
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 2rem;
}

h4 {
  font-size: 1.25rem;
  font-weight: 400;
}

main {
  background-color: #022638;
}
#hero {
  display: flex;
  height: calc(100vh - 3rem);
  background-image: url(img/hero.jpg);
  background-size: cover;
  background-position: bottom;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 40px;
}

#hero * {
  font-weight: 300;
}

#hero div {
  text-align: center;
}

#about-me-button {
  border: none;
  background-color: #fff3;
  font-size: 1.5rem;
  padding: 15px 25px;
  border-radius: 5px;
  transition-duration: 300ms;
}

#about-me-button:hover {
  background-color: #fff5;
}

/* Nav bar */

#nav-bar {
  position: sticky;
  top: 0;
  display: flex;
  justify-content: space-between;
  padding: 0 14vw;
  gap: 1.5rem;
  flex-wrap: wrap;
  background-color: #242424f8;
  z-index: 1;
}

#nav-bar > * {
  display: flex;
  gap: 0 1.5rem;
  flex-wrap: wrap;
}

#nav-bar a {
  display: flex;
  align-items: center;
  font-size: 1.1rem;
  padding: 0.5rem 0;
  gap: 0 0.3rem;
  transition-duration: 150ms;
}

#nav-bar a:hover {
  padding: 0 0 5px 0;
  color: #fff;
  img {
    filter: invert() opacity(1);
  }
}

#to-top {
  position: sticky;
  top: calc(100vh - 35px);
  left: calc(93vw - 35px);
  filter: invert() opacity(0.8);
  transition-duration: 150ms;
}

#to-top:hover {
  filter: invert() opacity(1);
}

#nav-bar img {
  filter: invert() opacity(0.8);
}

/* About */

#about-me {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 3rem 14vw;
}

#picture-pitch {
  display: flex;
  gap: 7vw;
  margin: 3rem 0;
}

#portfolio-picture {
  max-height: 433px;
  object-fit: contain;
  max-width: 40%;
}

#about-me p {
  margin: 1rem 0;
}

#skills-div {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

#skills {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

#skills div {
  text-align: center;
  margin: auto;
}

/* Projects */

#projects {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 4rem 14vw;
}

#projects-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 2rem 0;
  gap: 2rem;
}

.project-card {
  width: 300px;
  height: 275px;
  border-radius: 5px;
  overflow: hidden;
  margin: 0 auto;
}

.tools-description {
  height: 227px;
  background-size: cover;
}

.blur {
  display: flex;
  flex-direction: column;
  justify-content: end;
  align-items: end;
  transition-duration: 300ms;
  height: 100%;
}

.tools-used {
  display: flex;
  opacity: 0;
  background-color: rgba(02, 38, 56, 0.7);
  padding: 5px;
  border-top-left-radius: 4px;
  transition-duration: 300ms;
}

.project-card img {
  width: 24px;
}
.project-description {
  height: 56px;
  width: 100%;
  padding: 5px 0;
  overflow: hidden;
  background-color: rgba(02, 38, 56, 0.9);
  transition-duration: 300ms;
}

.project-description > h4 {
  margin-bottom: 5px;
}

.project-links {
  height: 48px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.project-links > a {
  width: 145px;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
  padding: 5px 0;
  transition-duration: 150ms;
}

.project-links > a:hover {
  background-color: rgba(255, 255, 255, 0.1);
  border: 1px solid rgba(255, 255, 255, 0.4);
  filter: brightness(1.2);
  color: white;
}

.tools-description:hover {
  .tools-used {
    opacity: 1;
    backdrop-filter: blur(2px);
  }
  .project-description {
    height: 117px;
    backdrop-filter: blur(2px);
  }
  .blur {
    backdrop-filter: blur(2px) brightness(0.85);
  }
}

.invert img {
  filter: invert() brightness(0.8);
}

#eggman > .tools-description {
  background-image: url(img/eggman.png);
}

#drumkit > .tools-description {
  background-image: url(img/drumkit.png);
}

#weather-api > .tools-description {
  background-image: url(img/weather-api.png);
}

#fireworks-cannon > .tools-description {
  background-image: url(img/fireworks-cannon.png);
}

#react-wishlist > .tools-description {
  background-image: url(img/react-wishlist.png);
}

#recipe-shopper > .tools-description {
  background-image: url(img/recipe-shopper.png);
}

/* Footer */
footer {
  background-color: #242424;
  text-align: right;
  line-height: 3rem;
  padding: 3rem 14vw;
  font-size: 1.25rem;
}

footer a:hover {
  text-decoration: underline;
}

